finally actually done

--- a/FarmProject/FarmProject.csproj
+++ b/FarmProject/FarmProject.csproj
@@ -28,4 +28,8 @@
     <PackageReference Include="VueCliMiddleware" Version="2.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
